added pagination generateCSVbyTitle